test: use the source to declare and test missing interceptors (#2021)